--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </a>
 
   <div class="max-w-7xl mx-auto px-4 py-10">
-    <h1 class="text-4xl font-bold text-center text-white mb-10 tracking-wide">⚡ Fancode Live Matches</h1>
+    <h1 class="text-4xl font-bold text-center text-white mb-10 tracking-wide"> Fancode Live Matches</h1>
     <div id="matches-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
       <!-- Matches load here -->
     <div class="rounded-2xl overflow-hidden shadow-xl match-card border border-gray-800 ring-2 ring-red-600">
@@ -236,7 +236,7 @@
                   <a href="https://web.bgrid.in/hls/?url=https://dai.fancode.com/primary/123863_english_hls_23869adfreeta-di_h264/index.m3u8" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg text-sm flex items-center shadow-md transition-all">
                     <i class="fas fa-play mr-2"></i> Watch
                   </a>
-                  <a href="https://web.bgrid.in/hls/?url=https://web.livesports18.workers.dev/ios=https://dai.fancode.com/primary/123863_english_hls_23869adfreeta-di_h264/index.m3u8" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg text-sm flex items-center shadow-md transition-all">
+                  <a href="https://web.bgrid.in/hls/?url=https://dai.fancode.com/primary/123863_english_hls_23869adfreeta-di_h264/index.m3u8" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg text-sm flex items-center shadow-md transition-all">
                     <i class="fas fa-ad mr-2"></i> Ad-Free
                   </a>
             
