--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         Join Telegram
     </a>
 <div class="max-w-7xl mx-auto px-4 py-10">
-    <h1 class="text-4xl font-bold text-center text-white mb-10 tracking-wide">⚡ Fancode Live Matches</h1>
+    <h1 class="text-4xl font-bold text-center text-white mb-10 tracking-wide"> Fancode Live Matches</h1>
     <div id="matches-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
       <!-- Matches load here -->
     <div class="rounded-2xl overflow-hidden shadow-xl match-card border border-gray-800 ">
